# BVH-Viewer

./: CMakeLists.txt  README.md
bvhs/: walk_fast_stright.bvh  walk_normal_right_45_hello (another copy).bvh
src/: main.cpp  parse_bvh.cpp  parse_bvh.h
